# tinySAT

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
docs/: CMakeLists.txt
dpll/: CMakeLists.txt
dpll/include/: CDpllAssignment.hpp  CDpllContext.hpp  CDpllFormula.hpp  CDpllSortHeap.hpp
dpll/include/misc/: CBacktrackList.hpp  CBacktrackSkiplist.hpp
dpll/src/: CDpllAssignment.cpp  CDpllContext.cpp  CDpllFormula.cpp  CDpllSortHeap.cpp
include/: CAbstractSolver.hpp  CBinarySolver.hpp  CDavisPutnamSolver.hpp  CDpllSolver.hpp  CGeneralSolver.hpp  SFormula.hpp  SMatch.hpp
include/core/: CException.hpp  CGraph.hpp  CMatchIterator.hpp  Macro.hpp  SFormula.hpp  SMatch.hpp
include/core/misc/: CBacktrackList.hpp
include/dpll/: CDpllAssignment.hpp  CDpllContext.hpp  CDpllFormula.hpp  CDpllSortHeap.hpp  CSolverContext.hpp  test.cpp
include/dpll/include/: CDpllAssignment.hpp  CDpllContext.hpp
include/dpll/src/: CDpllAssignment.cpp  CDpllContext.cpp  CDpllFormula.cpp  CDpllSortHeap.cpp
include/misc/: CBackStack.hpp  CBacktrackList.hpp  CBacktrackSkiplist.hpp  CChangeLog.hpp  CQuickHeap.h  CSkiplist.hpp
src/: CBinarySolver.cpp  CDavisPutnamSolver.cpp  CDpllSolver.cpp  CGeneralSolver.cpp  SFormula.cpp  SMatch.cpp  main.cpp
tags/: CMakeLists.txt
test/: CMakeLists.txt  test_backtrack_list.cpp  test_dpll_context.cpp
test/dpll-test/: CMakeLists.txt  dpll_context-test.cpp
test/misc-test/: CMakeLists.txt  misc_backtrack_list-test.cpp
test/solver-test/: CMakeLists.txt  dpll_solver-test.cpp
test/solver_test/: CMakeLists.txt  dpll_test.cpp
